2024年11月12日 导航栏添加链接 成员介绍添加内容

--- a/docs/成员/开发者/开发者.md
+++ b/docs/成员/开发者/开发者.md
@@ -12,7 +12,7 @@
 
 <!-- 包含 markdown 文件 可以像这样在一个 markdown 文件中包含另一个 markdown 文件，甚至是内嵌的。-->
 <!--@include: ./啸霄领域/霄杨/霄杨.md-->
-<!--@include: ./啸霄领域/难绷/难绷.md-->
+<!--@include: ./啸霄领域/MewingBoot58565/MewingBoot58565.md-->
 <!--@include: ./啸霄领域/W0DNMD/W0DNMD.md-->
 <!--@include: ./啸霄领域/ebwnqm/ebwnqm.md-->
 <!--@include: ./啸霄领域/shi/shi.md-->
