2024年11月13日 添加字体 apaxy开启lightgallery 成员介绍添加

--- a/docs/成员/开发者/开发者.md
+++ b/docs/成员/开发者/开发者.md
@@ -6,6 +6,8 @@
 <!--@include: ./落梦工作室/我梦/我梦.md-->
 <!--@include: ./落梦工作室/诺诺/诺诺.md-->
 <!--@include: ./落梦工作室/肥猫/肥猫.md-->
+<!--@include: ./落梦工作室/尘星/尘星.md-->
+<!--@include: ./落梦工作室/鸭籽/鸭籽.md-->
 <!--@include: ./落梦工作室/冰影狼/冰影狼.md-->
 
 ## 啸霄领域
