--- a/docs/成员/开发者/落梦工作室/冰影狼/冰影狼.md
+++ b/docs/成员/开发者/落梦工作室/冰影狼/冰影狼.md
@@ -1,5 +1,9 @@
 ::: info 冰影狼
 ![头像](/images/avatars/QQ180273805.jpg =100x)
-::: details 介绍
-无
+<!-- ::: details 介绍
+::: tabs
+== tab 1
+1
+== tab 2
+2 -->
 :::
