--- a/docs/成员/开发者/啸霄领域/霄杨/霄杨.md
+++ b/docs/成员/开发者/啸霄领域/霄杨/霄杨.md
@@ -23,14 +23,28 @@
 
 == 你准备挨*吧
 
-是时候给她一个深刻的教训了，轻轻捏住了绮纱的下巴，迫使她抬头与自己对视。
-“可恶的小鬼，你也不想这件事情被你家长知道吧”
+张三停下脚步，向云飞扬微微欠身，用一种恭敬而又不失冷峻的语气说道：“飞扬哥，我们已经按照您的指示，将那个小鬼带来了” 云飞扬微微点了点头，对张三和他的帮手表示了认可：“你们做得很好，辛苦了。”他的声音低沉而有力，透露出一种威严和不可抗拒的力量。
 
-“我……我错了， 云飞扬 哥哥，求你别这样……”她的眼神中充满了恐惧和绝望。
+昏黄的灯光勉强照亮了四周，空气中弥漫着一股陈旧与霉湿的味道。云飞扬站在一张破旧的木桌旁，桌上整齐的摆放着一排不可名状之物，他的目光如鹰隼般锐利，紧盯着对面那个瑟缩在角落里的少女。
 
 她感到自己的嚣张气焰在 云飞扬 的目光下逐渐消散，取而代之的是无尽的恐惧和悔恨。
 
-“现在，到我来教训你了！” 云飞扬 的声音冷冽如冰，他松开了绮纱的下巴，然后猛地从身旁抓起了棍棒
+少女名叫绮纱，脸上满是惊恐与不安，他瘦弱的身躯在宽大的衣衫下显得格外单薄，双手紧握成拳，指节因用力而泛白。
+
+是时候给她一个深刻的教训了，轻轻捏住了绮纱的下巴，迫使她抬头与自己对视。
+
+“可恶的小鬼，你也不想这件事情被别人知道吧”
+云飞扬嘴角勾起一抹冷笑，言语间透露出不容置疑的寒意。他的声音在空旷的地下室里回荡，如同锋利的刀刃，切割着每一寸空气，让人心生寒意。
+
+绮纱的喉咙像是被什么东西卡住了一般，发不出半点声音，只能无助地点点头，眼中满是祈求与绝望。他明白，云飞扬的话不仅仅是威胁，更是一种冷酷的宣判，自己的命运已经掌握在了这个男人的手中。
+
+“虽然晚了些但端午还是要有仪式感，粽叶、糯米、蜜枣都准备好了，还剩一样东西就交给你了”云飞扬嘴角勾起了一丝弧度，坏笑着说道。
+
+“你就准备艾草吧！”
+
+“我……我错了， 云飞扬 哥哥，求你别这样……”她的眼神中充满了恐惧和绝望。
+
+“现在，到我来教训你了！” 云飞扬 的声音冷冽如冰，他松开了绮纱的下巴，随即猛地从身旁抓起了棍棒，把她推倒在地，手上的棍棒犹如龙腾虎跃般迅猛挥击，每一次敲打都留下深深的痕迹，轨迹交错间，幻化出一道道残影，伴随着沉闷而有力的咚咚声。
 
 “呜哇啊啊啊 ♥大哥哥我错了! ~♥不要、不要再用棍棒拷打我了~ ♥要去了!!!♥呜呜......♥人渣，变态，废物..…...实在是♥，烂透了!♥”
 
