2024年12月14日 成员介绍修改

--- a/docs/成员/外部成员/外部成员.md
+++ b/docs/成员/外部成员/外部成员.md
@@ -1,6 +1,9 @@
 # 外部成员
 
 <!-- 包含 markdown 文件 可以像这样在一个 markdown 文件中包含另一个 markdown 文件，甚至是内嵌的。-->
+<!--@include: ../inclusion.md{25,26}-->
+
+<!-- 包含 markdown 文件 可以像这样在一个 markdown 文件中包含另一个 markdown 文件，甚至是内嵌的。-->
 <!--@include: ./阿伟/阿伟.md-->
 <!--@include: ./朝久暮/朝久暮.md-->
 <!--@include: ./a/a.md-->
