--- a/docs/成员/开发者/开发者.md
+++ b/docs/成员/开发者/开发者.md
@@ -1,5 +1,8 @@
 # 开发者
 
+<!-- 包含 markdown 文件 可以像这样在一个 markdown 文件中包含另一个 markdown 文件，甚至是内嵌的。-->
+<!--@include: ../inclusion.md{25,26}-->
+
 ## 落梦工作室
 
 <!-- 包含 markdown 文件 可以像这样在一个 markdown 文件中包含另一个 markdown 文件，甚至是内嵌的。-->
