--- a/docs/成员/开发者/落梦工作室/诺诺/诺诺.md
+++ b/docs/成员/开发者/落梦工作室/诺诺/诺诺.md
@@ -2,108 +2,11 @@
 ![头像](/images/avatars/QQ3445416244.png =100x)
 ::: details 介绍
 ::: tabs
-== 小野狗与小蝴蝶
-在一切最好的时光里，都闪烁着我们所有人的影子。
+== tab1
 
-从前有一条小野狗，他孤单单地生活在角落里。
+当听到那令人牙酸的笑声时，有人就要倒大霉了。
 
-偶尔看见蝴蝶飞过去，心里没有死掉的部分，会颤抖一下。那双翅膀上的花纹映入他的眼帘，刚要铭刻到灵魂的时候，就飞呀飞的，飞走了。
-
-小野狗匍匐在泥水里，头上有树荫，下雨天冷冰冰的，打在身上像被痛打了一顿。他只能舔舔自己，太陽出来，就缩到洞里，然后胡乱探出脑袋，跟大家打招呼。大家笑成一团，都说，小野狗真脏。
-
-蝴蝶飘到他头顶，说：“陪我玩儿吧。”小野狗呆呆地看着她，说：“我飞不起来。”
-
-蝴蝶说：“没事没事，我陪你飞我陪你飞，你试试看。”
-
-小野狗大喊一声：“嗨哟！”一跳三尺高，空中停留不住，“扑通”掉到地面上，摔断了几根肋骨。
-
-好多狗狂奔过去，嚷嚷着：“找骨头去，找骨头去，跑慢了没得吃。”
-
-小野狗小心翼翼地对蝴蝶说：“我先去找点儿骨头，饿死可不是玩的。”
-
-蝴蝶说：“好，你跑快点儿，抢到了骨头，我帮你搬，这样比别人抢得多点儿。”
-
-小野狗努力点点头，瘸着腿一阵跑。跑的时候腿很痛，但很开心，所以他一边跑一边唱歌。
-
-没跑多久，天忽然刮风，忽然打雷。小野狗心想：真可怕，骨头还没抢到，我要死在荒野里了。
-
-蝴蝶在他耳边飞翔，说：“加油加油，我们去抢骨头。”
-
-小野狗又痛又难过，脸上开心地笑，说：“好啊，蝴蝶，以后咱们都一起去抢骨头。”
-
-又跑了一会儿，小野狗摔进了大泥坑，污水哗啦啦灌，转眼就淹到了他的脖子。
-
-小野狗来不及哭，只是奋力抬头看蝴蝶，然后拼命跳。他跳着跳着，却不会飞，怎么都跳不出去。他怕蝴蝶着急，就笑着喊：“我出来了，我快出来了！”
-
-因为跳得太剧烈、太频繁，所以他的声音听起来很可笑。
-
-蝴蝶收起翅膀，驻足在泥坑边。她很认真地盯着丑陋的小野狗，看了好一阵，说：“我们以后真的一起抢骨头吗？”
-
-小野狗用力点点头。他傻傻咧着嘴笑，眼泪一滴滴从心里流出来，从记忆深处漫上来，浮到最快乐的空间，结果笑容也是咸的。
-
-蝴蝶拽着他的耳朵，扑棱着翅膀，全力拉呀拉。
-
-雨还是在下，蝴蝶的翅膀湿了。
-
-小野狗看得心疼，猛地一扑，爪子趴在坑沿上。
-
-笨笨的小野狗叫：“我们抢骨头去，我们抢骨头去！”
-
-蝴蝶松开了他。
-
-世界一丝一丝地失去颜色。
-
-蝴蝶说：“我的翅膀很久以前就破碎了，只要能救你，再碎一次也没关系。”
-
-小野狗说：“抢骨头去抢骨头去。”
-
-其实他在想，就算不要骨头，也不能让蝴蝶的翅膀碎掉。
-
-蝴蝶说：“你将来一定会有很多很多的骨头，到那时候，你就不是小野狗了。真希望早点儿看到那一天啊。”
-
-小野狗说：“抢骨头去抢骨头去。”
-
-其实他在想，一起抢骨头。这句话，我爱的不是宾语，而是状语。
-
-我爱的不是骨头，而是一起。
-
-巨大的雨点扑了下来。
-
-蝴蝶蓦地飞起，盘旋几圈，离开了。
-
-离开的刹那，她的眼泪掉了下来。
-
-从漫天的雨点里，小野狗清晰地分辨出，哪一滴才是她的眼泪。
-
-眼泪掉在它受伤的肋骨，“吱啦吱啦”地烫人。
-
-小野狗默不作声，终于爬出了坑。他也不抖去所有的水，就挪回了原来的地方。
-
-原来的地方，没有蝴蝶在飞。
-
-小野狗也不会飞。
-
-小野狗不抖去所有的水，因为身上还有那滴眼泪。
-
-因此他全身冷透，却动也不动。
-
-小野狗想，蝴蝶，小野狗不但想你，也想和你一起去抢骨头，无论抢不抢得到，都要在一起。
-
-他没有蝴蝶，只有蝴蝶的一滴眼泪。
-
-回忆不能抹去，只好慢慢堆积。岁月带你走上牌桌，偏偏赌注是自己。
-
-你燃烧，我陪你焚成灰烬。你熄灭，我陪你低落尘埃。你出生，我陪你徒步人海。你沉默，我陪你一言不发。你欢笑，我陪你山呼海啸。
-
-你衰老，我陪你满目疮痍。你逃避，我陪你隐入夜晚。你离开，我只能等待。
-
-没有很好的机会跟你说一声“再见”，以后再也见不到你。比幸福更悲伤，比相聚更遥远，比坚强更脆弱，比离开更安静。
-
-终将有一天，我要背上行囊登船了。不是那艘钢铁巨兽，只是一叶很小的竹筏。我会努力扎起薄弱的帆，希望你能看见一点遥远的白色。
-
-或许在深邃的宇宙中，偶尔你能注视一眼。
-
-那就会让我知道，你安全地降落在另一片土地上，欢歌笑语，我们已经记不起什么叫作惆怅。
+<!-- 在暗流涌动的世界里，隐藏着一位犹如狐狸般的乐子人，她不仅是幕后操控一切的反派BOSS，更是以她那独特的方式——身着一袭裸体围裙，成为众人谈笑间的谜团。她，便是那个在阴影中微笑，以戏耍他人为乐的神秘存在。这位乐子人，拥有着狐狸般的狡黠与机敏，总能在不为人知的角落，以她那裸体围裙为掩护，编织出一场场令人啼笑皆非的恶作剧。她的每一次出手，都仿佛是在向世界宣告：她，才是这场游戏的主宰。然而，在这看似玩世不恭的外表下，却隐藏着一颗难以触及的柔软之心。在她的内心深处，有一片鲜为人知的柔软之地，那里藏着她的脆弱与温情。但这片柔软，却如同她精心守护的秘密花园，鲜有人能够接近，更无人能够窥探其全貌。她以冷酷和戏谑作为自己的盔甲，将真实的自我紧紧包裹，不让任何人触碰。然而，正是这份难以触及的柔软，让她在冷酷的反派形象中，增添了一抹难以言喻的魅力。她，既是那个在幕后操纵风云的强者，也是那个内心深处藏着温柔与渴望的普通人。在这片复杂多变的世界里，她继续以狐狸般的智慧与狡黠，书写着属于自己的传奇篇章，而那片柔软的内心，则成为了她最宝贵的秘密，等待着那个能够真正理解她、接近她的人的出现。 -->
 
 == tab2
 :::
