2025年1月22日 教程更新

--- a/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/4-更新模组/更新模组.md
+++ b/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/4-更新模组/更新模组.md
@@ -6,7 +6,7 @@
 ### 可以从这里下载到 需要更新的模组
 本站文件夹 [http://lmgzs.fun:444/](http://lmgzs.fun:444/files/%e6%88%91%e7%9a%84%e4%b8%96%e7%95%8c/Java/%e6%a8%a1%e7%bb%84/1.20.1/)
 ::: tip 提示
-它位于 模组更新/ 文件夹
+它位于 `模组更新/` 文件夹
 :::
 
 ### 删除旧模组，添加新模组
