--- a/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/8-服务器设置/3-模组配置文件.md
+++ b/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/8-服务器设置/3-模组配置文件.md
@@ -144,3 +144,23 @@ ClientPackDownloadUrls =
 augment_limits = ["ars_nouveau:glyph_amplify=10"]
 ```
 :::
+
+### cs[机械动力]create-1.20.1-0.5.1.j.jar
+::: details 配置文件 create-server.toml
+```c
+└─<版本名字>
+    └─world
+       └─serverconfig
+             create-server.toml
+```
+::: details 修改
+```c
+#Maximum amount of blocks in a structure movable by Pistons, Bearings or other means.
+#Range: > 1
+maxBlocksMoved = 4096
+
+#Maximum length of track that can be placed as one batch or turn.
+#Range: 16 ~ 128
+maxTrackPlacementLength = 128
+```
+:::
