2025年2月5日07点37分 所有成员目录内容添加

--- a/docs/成员/外部成员/朝久暮/朝久暮.md
+++ b/docs/成员/外部成员/朝久暮/朝久暮.md
@@ -1,5 +1,5 @@
 ::: info 朝久暮
-![头像](/images/avatars/QQ2062827001.jpg =100x)
+![头像](/成员/外部成员/朝久暮/media/images/avatars/processed/QQ2062827001.jpg =100x)
 ::: details 介绍
 ::: tabs
 == 血泪交织
