--- a/docs/成员/开发者/落梦工作室/尘星/尘星.md
+++ b/docs/成员/开发者/落梦工作室/尘星/尘星.md
@@ -1,5 +1,5 @@
 ::: info 尘星
-![头像](/images/avatars/QQ1602743246.jpg =100x)
+![头像](/成员/开发者/落梦工作室/尘星/media/images/avatars/processed/QQ1602743246.jpg =100x)
 <!-- ::: details 介绍
 ::: tabs
 == tab 1
