--- a/docs/成员/开发者/落梦工作室/肥猫/肥猫.md
+++ b/docs/成员/开发者/落梦工作室/肥猫/肥猫.md
@@ -1,5 +1,5 @@
 ::: info 肥猫
-![头像](/images/avatars/QQ779648508.jpg =100x)
+![头像](/成员/开发者/落梦工作室/肥猫/media/images/avatars/processed/QQ779648508.jpg =100x)
 ::: details 介绍
 ::: tabs
 == 破碎征途
