--- a/docs/成员/开发者/落梦工作室/鸭籽/鸭籽.md
+++ b/docs/成员/开发者/落梦工作室/鸭籽/鸭籽.md
@@ -1,5 +1,5 @@
 ::: info 鸭籽
-![头像](/images/avatars/QQ3461167195.jpg =100x)
+![头像](/成员/开发者/落梦工作室/鸭籽/media/images/avatars/processed/QQ3461167195.jpg =100x)
 <!-- ::: details 介绍
 ::: tabs
 == tab 1
