--- a/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/8-服务器设置/3-模组配置文件.md
+++ b/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/8-服务器设置/3-模组配置文件.md
@@ -155,6 +155,11 @@ augment_limits = ["ars_nouveau:glyph_amplify=10"]
 ```
 ::: details 修改
 ```c
+#The amount of time a server waits before sending out tickrate synchronization packets.
+#These packets help animations to be more accurate when tps is below 20.
+#Range: > 5
+tickrateSyncTimer = 6
+
 #Maximum amount of blocks in a structure movable by Pistons, Bearings or other means.
 #Range: > 1
 maxBlocksMoved = 4096
