--- a/docs/成员/外部成员/阿伟/阿伟.md
+++ b/docs/成员/外部成员/阿伟/阿伟.md
@@ -1,5 +1,5 @@
 ::: info 阿伟
-![头像](/images/avatars/QQ1928984073__1.png =100x)
+![头像](/成员/外部成员/阿伟/media/images/avatars/processed/QQ1928984073__1.png =100x)
 ::: details 介绍
 ::: tabs
 == 爱的守候
