--- a/docs/成员/开发者/啸霄领域/霄杨/霄杨.md
+++ b/docs/成员/开发者/啸霄领域/霄杨/霄杨.md
@@ -1,5 +1,5 @@
 ::: info 霄杨Skycie
-![头像](/images/avatars/QQ1816323534.jpg =100x)
+![头像](/成员/开发者/啸霄领域/霄杨/media/images/avatars/processed/QQ1816323534.jpg =100x)
 ::: details 介绍
 ::: tabs
 == 粉裙下的英雄
