--- a/docs/成员/开发者/落梦工作室/冰影狼/冰影狼.md
+++ b/docs/成员/开发者/落梦工作室/冰影狼/冰影狼.md
@@ -1,5 +1,5 @@
 ::: info 冰影狼
-![头像](/images/avatars/QQ180273805.jpg =100x)
+![头像](/成员/开发者/落梦工作室/冰影狼/media/images/avatars/processed/QQ180273805.jpg =100x)
 <!-- ::: details 介绍
 ::: tabs
 == tab 1
