--- a/docs/成员/开发者/落梦工作室/我梦/我梦.md
+++ b/docs/成员/开发者/落梦工作室/我梦/我梦.md
@@ -1,5 +1,5 @@
 ::: info 我梦
-![头像](/images/avatars/QQ1260292320.jpg =100x)
+![头像](/成员/开发者/落梦工作室/我梦/media/images/avatars/processed/QQ1260292320.jpg =100x)
 ::: details 介绍
 ::: tabs
 == 敷衍大王
