--- a/docs/成员/开发者/落梦工作室/诺诺/诺诺.md
+++ b/docs/成员/开发者/落梦工作室/诺诺/诺诺.md
@@ -1,5 +1,5 @@
 ::: info 诺诺
-![头像](/images/avatars/QQ3445416244.png =100x)
+![头像](/成员/开发者/落梦工作室/诺诺/media/images/avatars/original/QQ3445416244.png =100x)
 ::: details 介绍
 ::: tabs
 == tab1
