--- a/docs/落梦工作室/贡献/贡献.md
+++ b/docs/落梦工作室/贡献/贡献.md
@@ -1,53 +1,136 @@
 
 # 贡献
+
 ---
 
-### A_WEI
-::: details 点击展开
-- 2024年7月31日
-<br>
-更新模型
-<br>
-+赞助\明日方舟\铃兰
+### [A_WEI](../../成员/外部成员/阿伟/阿伟.md)
+::: details 落梦域_Java-1.20.1-模组服
 
-- 2024年7月17日
-<br>
-购买模型
-<br>
-[【MC模型】铃兰YSM模型展示](https://www.bilibili.com/video/BV1Az42187p2/)
-<br>
-+赞助\明日方舟\铃兰
+---
 
-- 2024年6月
-<br>
-参与地图地形测试
-<br>
-参与模组测试
+###### 2024年12月4日
+- 更新模型
+
+    [【MC模型】铃兰YSM模型展示](https://www.bilibili.com/video/BV1Az42187p2/)
+    <br>
+    +赞助\明日方舟\铃兰
+
+---
+
+###### 2024年7月31日
+- 更新模型
+
+    [【MC模型】铃兰YSM模型展示](https://www.bilibili.com/video/BV1Az42187p2/)
+    <br>
+    +赞助\明日方舟\铃兰
+
+---
+
+###### 2024年7月17日
+- 购买模型
+
+    [【MC模型】铃兰YSM模型展示](https://www.bilibili.com/video/BV1Az42187p2/)
+    <br>
+    +赞助\明日方舟\铃兰
+
+---
+
+###### 2024年6月
+- 参与地图地形测试
+- 参与模组测试
 :::
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ---
 
-### A_zhao
-::: details 点击展开
-- 2024年8月6日
-<br>
-购买模型
-<br>
-[伊蕾娜但是mc！](https://www.bilibili.com/video/BV1qr421M7C8/)
-<br>
-+赞助\魔女之旅\伊蕾娜\bilibili-UID-400763031
+### [A_zhao](../../成员/外部成员/朝久暮/朝久暮.md)
+::: details 落梦域_Java-1.20.1-模组服
 
-- 2024年8月4日
-<br>
-更新模型
-<br>
-+赞助\明日方舟\铃兰
+---
 
-- 2024年7月27日
-<br>
-购买模型
-<br>
-[[YSM模型]火焰猫燐-猫形态](https://www.bilibili.com/video/BV1Vw4m1y7ro/)
-<br>
-+赞助\东方Project\火焰猫燐
+###### 2025年2月3日
+- 更新模型
+
+    [【MC模型】最蒂厨的一集](https://www.bilibili.com/video/BV1Cu2CYUEJp/)
+    <br>
+    +赞助\明日方舟\斯卡蒂
+
+    [【MC模型】纣王最羡慕的一集](https://www.bilibili.com/video/BV1ZJeJehEju/)
+    <br>
+    +赞助\明日方舟\巫恋
+
+    [【MC模型】铃兰YSM模型展示](https://www.bilibili.com/video/BV1Az42187p2/)
+    <br>
+    +赞助\明日方舟\铃兰
+
+---
+
+###### 2024年12月9日
+- 购买模型
+
+    [【MC模型】最蒂厨的一集](https://www.bilibili.com/video/BV1Cu2CYUEJp/)
+    <br>
+    +赞助\明日方舟\斯卡蒂
+
+---
+
+###### 2024年8月11日
+- 更新模型
+
+    [伊蕾娜但是mc！](https://www.bilibili.com/video/BV1qr421M7C8/)
+    <br>
+    +赞助\魔女之旅\伊蕾娜\bilibili-UID-400763031
+
+---
+
+###### 2024年8月6日
+- 购买模型
+
+    [伊蕾娜但是mc！](https://www.bilibili.com/video/BV1qr421M7C8/)
+    <br>
+    +赞助\魔女之旅\伊蕾娜\bilibili-UID-400763031
+
+---
+
+###### 2024年8月4日
+- 更新模型
+
+    [【MC模型】铃兰YSM模型展示](https://www.bilibili.com/video/BV1Az42187p2/)
+    <br>
+    +赞助\明日方舟\铃兰
+
+---
+
+###### 2024年7月27日
+- 购买模型
+
+    [[YSM模型]火焰猫燐-猫形态](https://www.bilibili.com/video/BV1Vw4m1y7ro/)
+    <br>
+    +赞助\东方Project\火焰猫燐
 :::
