2025年3月18日 成员介绍 新分类

--- a/docs/成员/开发者/落梦工作室/诺诺/诺诺.md
+++ b/docs/成员/开发者/落梦工作室/诺诺/诺诺.md
@@ -2,11 +2,198 @@
 ![头像](/成员/开发者/落梦工作室/诺诺/media/images/avatars/original/QQ3445416244.png =100x)
 ::: details 介绍
 ::: tabs
-== tab1
+== 猫
+在那昏暗的房间里的大床上一个鼓包动力两下随后从里面伸出了一只手，那手在外面摸索了几下后终于拿到了放在床边的手机，她拿起手机看了一下时间“唔，下午3点了。”床上的生物慢慢的爬了起来伸了个懒腰站在了床上。
+
+一头白色的齐肩短发，身上穿了一件宽大的T恤衫当作睡衣，这就是糯糯。一个神秘的生物，一只“薛定谔的猫”。
+
+猫从床上一跃而下精确的跳到了干净的地面上，猫轻轻的把外卖盒踢到一边，沿着那唯一干净的道路走到厨房，“今天吃点什么好呢”，猫随手从旁边的冰箱拿出几样食材，做了简单的清理之后就一股脑的丢进了进去，猫一边翻炒着一边看着手机上新收到的信息，然后熟练的加入“适量”的调味料并继续翻炒，随着不断的翻炒，一股熟悉的气味慢慢飘了出来，关火、把锅铲放到盛菜用的碟子里、快速跳到墙后，不到3秒，伴随着剧烈的爆炸房子也抖动了几下，猫看着一片狼藉的厨房不由的叹了口气“第672次下厨尝试失败，今天也继续点外卖吧。”
+
+饱餐一顿之后就该到每周一的打扫卫生环节了，清理之前吃完的外卖盒、把墙上爆炸产生的灰和溅上去的“食物残渣”清理掉、拖地，忙碌了几个小时终于是恢复了原来的样子。
+
+猫把衣服和内裤丢进洗衣机随后跑进浴室，哼歌的声音夹水声“哼~~”“哒哒哒~”....
+
+10分钟后。“哈~哈~”“唔~~”“哈~~”....又是10分钟过去了。“唔❤~~”“哈❤~哈❤~”“💕💕💕噫💕💕💕！！！！”.....“唔~这次有点过头了呢”猫从浴缸中已经凉透了的水里慢慢爬出来打了个冷颤，猫快速的抖动身体甩干身上的水穿上衣服坐到电脑桌前开始了今天的游戏。
+
+“1”
+
+“1”
+
+“玩”
+
+“玩”
+
+游戏里她是王，游戏里的众多玩家都是她的宠妃，猫调戏着他们，看他们面红耳赤的样子，自己则在一旁享受这番光景。捆绑、囚禁、蒙眼、耻辱、教培、调教...猫乐此不彼地向他们输送着各种知识。
+
+“该睡觉了，晚安”
+
+“晚安安”
+
+一位玩家离开了
+
+“我也去睡觉了，晚安”
+
+“晚安安”
+
+“晚安”
+
+“晚安安”
+
+......
+
+......
+
+“唔~”又只剩一只猫了。
+
+猫在月光下游荡着，看着游戏里的太阳升起又落下一遍又一遍却始终没有玩家上线。
+
+清晨的太阳从窗帘的缝隙照亮猫那失落的脸庞。“该去睡觉了。”猫钻进被窝把自己缩成一团随后进入了梦乡。
+
+梦里同伴们抱着猫一起躺在草坪上晒太阳，梦里猫和同伴们在一起打游戏，一起抢着袋子里的最后一块薯片，梦里猫和伙伴们不在隔着一块薄薄的屏幕...
+
+一阵声音把猫惊醒，猫睁开双眼环顾四周，熟悉的房间，熟悉的大床，房间里没有其他人，只有自己。她又重新闭上双眼“唔~刚才的梦好像还不错”她喃喃到，“再睡会吧”。
+
+
+
+== :╮
 
 嘴角勾起一丝令人不易察觉的笑容，有人要倒大霉了。
 
-<!-- 在暗流涌动的世界里，隐藏着一位犹如狐狸般的乐子人，她不仅是幕后操控一切的反派BOSS，更是以她那独特的方式——身着一袭裸体围裙，成为众人谈笑间的谜团。她，便是那个在阴影中微笑，以戏耍他人为乐的神秘存在。这位乐子人，拥有着狐狸般的狡黠与机敏，总能在不为人知的角落，以她那裸体围裙为掩护，编织出一场场令人啼笑皆非的恶作剧。她的每一次出手，都仿佛是在向世界宣告：她，才是这场游戏的主宰。然而，在这看似玩世不恭的外表下，却隐藏着一颗难以触及的柔软之心。在她的内心深处，有一片鲜为人知的柔软之地，那里藏着她的脆弱与温情。但这片柔软，却如同她精心守护的秘密花园，鲜有人能够接近，更无人能够窥探其全貌。她以冷酷和戏谑作为自己的盔甲，将真实的自我紧紧包裹，不让任何人触碰。然而，正是这份难以触及的柔软，让她在冷酷的反派形象中，增添了一抹难以言喻的魅力。她，既是那个在幕后操纵风云的强者，也是那个内心深处藏着温柔与渴望的普通人。在这片复杂多变的世界里，她继续以狐狸般的智慧与狡黠，书写着属于自己的传奇篇章，而那片柔软的内心，则成为了她最宝贵的秘密，等待着那个能够真正理解她、接近她的人的出现。 -->
 
-== tab2
+
+== 记忆拓印
+来到这个地方已经有段时间了，经过观测，这地方还有很多很多的时间。
+
+流水线上的机器从搭建好的那一刻开始，就一直在运作，源源不断的生产着材料。和以前一样，这些机器都是由阿尾来建造的。
+
+“材料已经足够，可以开始搭建设备了”，阿尾手上捧着平板，看着上面不断增长的数字说道。
+
+将材料运送到打印机的附近，打印机开始工作，不多时，一个传送装置便完成了。
+
+将能源输送到传送装置。
+
+是时候将他们带过来了。
+
+和往常一样，这次行动依旧是由糯糯一个人来完成。这事已经做过很多次，已经再熟练不过。任务的主要目标就两点，传送回去之后，找到建筑扫描并存储，找到符合条件的生物，进行思维上传，最后再传送返回。
+
+随着传送装置的启动，糯糯的身影一瞬间便消失了，通讯设备也断开了连接。这都是正常的，不必担心。
+
+“不出意外的话，他应该已经过去了”，阿尾说。
+
+黑暗吞噬了一切，再睁眼时，映入眼帘的是熟悉的画面。糯糯传送到的坐标，正是离开这里前，最后停留的地方。
+
+庭院的桌子上已经布满了落叶，角落里的音乐盒，播放完的唱片正安静的躺在里面，这里的一切都像被按下了暂停键。环顾四周，树木围成的墙内坐落着一个木制别墅，旁边是一片菜地，别墅上方是高山，整个别墅镶嵌在山崖下，整个地方建筑在一个天坑中。
+
+糯糯并没有急着扫描建筑，而是在庭院中闲逛了起来，像似在回忆曾经的过往。曾经在这一起闲聊，一起分享音乐。
+
+阿尾时常坐在这，听着伤感音乐，回想着那逝去的前任。很长一段时间都沉浸在那失落的情绪中，直到阿尾遇到了大哥，大哥将阿尾从失落中拯救了出来......
+
+围墙边上，有一个不大的鱼缸，鱼缸上方的开口可以很轻松的打开，之前鱼缸里养有一只河豚，这个河豚可不普通，他的名字叫："不求人！"，它的来历可不简单，大哥费了老大劲才将它抓住并放入鱼缸。大哥养这个河豚可不是为了观赏，更不是为了吃它，而是大哥后背痒的时候，就把河豚捞出来，放到后背上摩擦。阿尾每次都劝说大哥要不换个东西挠背，实在不行帮大哥挠背也行，可是大哥总是回到：“其他的不得劲，这个才舒服”。
+
+穿过围墙，转头便看见木质别墅旁的那片菜地，菜地的土豆早已腐烂成泥，但阿尾抡锄掀土的残影仿佛仍在飞溅。
+
+阿尾的小包永远斜挂在腰间，帆布被土豆撑出棱角分明的肿块，小包里不装别的，只装土豆，装满了土豆。每当感到稍微饥饿的时候，两只小手一用力，猛地拽过包链，小包就从身后被拽到了身前，手指灵活的将小包绳子稍微松开，就急不可耐的将那白皙的小手伸进去抓土豆。抓到土豆立马就将手抽了出来，并往嘴里送，阿尾每次低头吃两口就抬起头左顾右盼，然后看向小包里面，生怕土豆被别人抢走，仿佛不是在掏食物，而是在和某个隐形的掠夺者争夺生存权，当看到里面还是满满的土豆，便感到一阵舒心。
+
+当小包里的土豆逐渐减少，阿尾也逐渐感到危机，土豆见底，又感到饥饿的时候，总是以百米冲刺的速度跑向那片菜地，抡起锄头就是一顿猛锄，每一锄头下去，就有大块的泥土被掀飞出去，也掀出了很多很多的土豆。
+
+每次看到这场景，心中总是忍不住赞叹一句，不愧是考古出身的，这手法，这力度，妥妥的大师级别。
+
+地上凌乱的堆满了土块，阿尾急不可耐的把锄头扔向一边，卷起袖子就开始扒拉土块里的土豆，一边扒拉还一边往嘴里送，也不管那上面粘有多少泥土。
+
+我问过阿尾，这土豆是有什么魔力吗，让你那么爱不释手，“主要是喜欢！喜欢生吃！”，阿尾一边咀嚼着土豆一边说道。
+
+走进别墅内，上到别墅二楼，二楼在半山腰，从二楼出去，沿着石头修建的道路往前走，前面是一个悬空木质别墅，悬空木质别墅曾是胜负的见证，这两栋别墅的主人曾经和对方比赛，看谁建的别墅更受欢迎。
+
+“听说你也要建别墅？”
+
+“是的，你要和我比划比划？”
+
+“当然，看看谁建的好看，一决雌雄！”
+
+不出所料，悬空木质别墅更受欢迎。
+
+别墅后方是一个雕塑，雕塑前立着一块告示牌，告示牌上写着大大的几个字："施工中"，建造这个雕塑的人早已离开，已经没机会完工了。还有那些在其他地方，运行中的机器，直到报废，再也无人维护。
+
+也回忆得差不多了，该扫描建筑了，糯糯拿出扫描设备，对着这里的建筑一一扫描，光斑掠过每一块砖石，连裂缝都被编码成数据。不多时，便完成了所有建筑，包括地形的扫描，这附近的一切地形和建筑都完全记录了下来。
+
+糯糯正要离开时，发现一道熟悉的身影，她的裙摆沾满尘土，眼神像受惊的鹿，是阿尾的女仆，她也发现了糯糯，两双视线正对视着。女仆的眼神中传来了疑惑，惊讶的目光，糯糯向前走去，来到了女仆的身前，
+
+“这里已经变得岌岌可危，你的主人也很想你，我可以带你去你主人的身旁，你是否愿意和我一起前往新的地方”。
+
+女仆听到这个世界变得不再安全，心中感到了不安，也没多问。
+女仆毫不犹豫的点头答应。
+
+糯糯拿出了扫描设备，对着女仆进行了扫描，就在女仆还在疑惑，这是做什么的时候，糯糯已经完成了扫描，转身便离开了，看着糯糯越走越远的背影，女仆感到了一丝不安，小心翼翼的叫道：“你不是说要带我离开吗？”
+
+“是的，带你离开，不过只能带走你的思维。”
+
+女仆似乎并没有完全理解这句话的意思，站在那思考着，等回过神来，糯糯已经离去。“思维吗？能让主人见到想念中的人也好吧。”
+
+世界另一边，阿尾今日已经完成了对传送装置的检修，阿尾看着手表，说道：“应该差不多要回来了。”
+
+下意识摸了摸腰间空荡的小包，那里本该装满土豆，此刻却只剩下几粒冰冷的电子元件。
+
+<!-- 不多时，传送装置传来动静，从里面显现出了糯糯的身影。 -->
+
 :::
+
+
+
+<!-- 
+
+最近不知怎么，每当宁静的时候，总会想起曾经的过往。
+“或许最近正是时候？我应该"回去"看看？”，糯糯坐在草地上心中想着。“那可真是充满回忆的地方”。
+
+“感觉很多建筑都不熟悉了”，azhao说道。
+记忆出现偏差了吗
+并不是，而是脑海里不断的回忆曾经的建筑，忘记了许多的细节，把它想象得更加完美，以至于再次看到它，就会认不出了。
+
+为了更完美的地形，会把要粘贴的地方给删除，让地图重新生成，之后再粘贴建筑
+
+他俩女仆弄丢的样子真是可怕，那眼神，仿佛要把我抓去当女仆
+
+ -->
+
+
+
+<!-- 
+
+== 设定
+我的世界常事改小说
+
+- 玩家进入新存档
+- 玩家传送到了新的宇宙
+
+- 添加有模组的存档
+- 这个宇宙本身就拥有的
+
+- 玩家更换存档游玩
+- 玩家传送到了另一个宇宙
+
+- 从旧存档复制建筑到新存档
+- 从宇宙1扫描并保存建筑信息，在宇宙2中按照蓝图重新建设。
+
+- 旧存档建筑中包含有模组1、2的内容，新存档有模组2、3，旧建筑搬迁过去自然是没有模组1的内容。
+- 新宇宙没有旧宇宙的一些物质，建筑当然就会缺角
+
+- 从旧存档复制生物到新存档
+- 将宇宙1生物的思维上传，在宇宙2中培养身体并导入记忆，这并不是原来的生物，只是拥有相同记忆。
+
+- 旧存档生物是模组1的内容，新存档有模组2、3，生物自然是复制不了到新存档。
+- 新宇宙不允许此类生物出现
+
+- 玩家更换存档可能是因为：存档损坏、完结，模组bug等
+- 宇宙：热寂、大撕裂，大崩塌
+
+- 玩家任何时候都可以搬迁旧建筑到新存档，如果有地形模组，可以通过预加载地图来看看地形是否满意，如果不满意就调整参数下一个存档见，满意之后再搬迁。
+- 传送到新宇宙耗尽了资源，并且传送不能携带额外的物品，需要先发展一段时间，有能力后就对当前宇宙进行观测，如果当前宇宙状态堪忧就传送去下一个宇宙，如果状态量好，就继续发展，搭建设备以供传送回旧宇宙，复制建筑和生物。为什么不启程之前就复制建筑和生物，因为每多一次传送，都有会多丢失一部分的数据，所以尽可能的少传送。
+
+ -->
+
+
+
+<!-- 
+
+在暗流涌动的世界里，隐藏着一位犹如狐狸般的乐子人，她不仅是幕后操控一切的反派BOSS，更是以她那独特的方式——身着一袭裸体围裙，成为众人谈笑间的谜团。她，便是那个在阴影中微笑，以戏耍他人为乐的神秘存在。这位乐子人，拥有着狐狸般的狡黠与机敏，总能在不为人知的角落，以她那裸体围裙为掩护，编织出一场场令人啼笑皆非的恶作剧。她的每一次出手，都仿佛是在向世界宣告：她，才是这场游戏的主宰。然而，在这看似玩世不恭的外表下，却隐藏着一颗难以触及的柔软之心。在她的内心深处，有一片鲜为人知的柔软之地，那里藏着她的脆弱与温情。但这片柔软，却如同她精心守护的秘密花园，鲜有人能够接近，更无人能够窥探其全貌。她以冷酷和戏谑作为自己的盔甲，将真实的自我紧紧包裹，不让任何人触碰。然而，正是这份难以触及的柔软，让她在冷酷的反派形象中，增添了一抹难以言喻的魅力。她，既是那个在幕后操纵风云的强者，也是那个内心深处藏着温柔与渴望的普通人。在这片复杂多变的世界里，她继续以狐狸般的智慧与狡黠，书写着属于自己的传奇篇章，而那片柔软的内心，则成为了她最宝贵的秘密，等待着那个能够真正理解她、接近她的人的出现。
+
+ -->
