--- a/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/8-服务器设置/3-模组配置文件.md
+++ b/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/8-服务器设置/3-模组配置文件.md
@@ -123,9 +123,13 @@ MaidWorkRange = 64
 #Example: ["https://www.dropbox.com/download/apple.zip", "https://www.dropbox.com/download/cat.zip"]
 ClientPackDownloadUrls =
 [
-    "http://lmgzs.fun:444/files/.../车万女仆 女仆资源包/免费/我的世界/萌化生物     /minecraft_cute-creature-1.2.0.zip" ,
+    "http://lmgzs.fun:444/files/.../车万女仆 女仆资源包/免费/我的世界/萌化生物/     minecraft_cute-creature-1.2.0.zip" ,
     "http://lmgzs.fun:444/files/.../车万女仆 女仆资源包/免费/碧蓝档案/才羽桃井 女仆/blue-archive_saiba-momoi__maid.zip",
-    "http://lmgzs.fun:444/files/.../车万女仆 女仆资源包/免费/碧蓝档案/枣伊吕波     /blue-archive_natsume_iroha.zip"
+    "http://lmgzs.fun:444/files/.../车万女仆 女仆资源包/免费/碧蓝档案/枣伊吕波/     blue-archive_natsume_iroha.zip",
+    "http://lmgzs.fun:444/files/.../车万女仆 女仆资源包/免费/#未分类/               huangushi-1.0.0.zip",
+    "http://lmgzs.fun:444/files/.../车万女仆 女仆资源包/免费/#未分类/               new_year_model_pack-1.0.0.zip",
+    "http://lmgzs.fun:444/files/.../车万女仆 女仆资源包/免费/#未分类/               yingbai_arknights_pack-1.0.4.zip",
+    "http://lmgzs.fun:444/files/.../车万女仆 女仆资源包/免费/#未分类/               zhi_ban-1.0.0.zip"
 ]
 ```
 :::
@@ -167,5 +171,13 @@ maxBlocksMoved = 4096
 #Maximum length of track that can be placed as one batch or turn.
 #Range: 16 ~ 128
 maxTrackPlacementLength = 128
+
+#Maximum length of a Train Stations' assembly track.
+#Range: > 5
+maxAssemblyLength = 256
+
+#Amount of game ticks between shots of the cannon. Higher => Slower
+#Range: > 1
+schematicannonDelay = 2
 ```
 :::
