--- a/docs/落梦工作室/贡献/贡献.md
+++ b/docs/落梦工作室/贡献/贡献.md
@@ -134,3 +134,43 @@
     <br>
     +赞助\东方Project\火焰猫燐
 :::
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+---
+
+### [a](../../成员/外部成员/a/a.md)
+::: details 落梦域_Java-1.20.1-模组服
+
+---
+
+###### 2025年3月11日
+- 参与群组服测试
+- 参与服务器插件测试
+---
+
+###### 2025年3月7日
+- 购买模型
+
+    [致以无暇的时代【限时免费-YSM模型】生日快乐，爱莉希雅](https://www.bilibili.com/video/BV1p4m2YZENz/)
+    <br>
+    +赞助\崩坏3\爱莉希雅
+:::
