2025年11月9日 更新教程 更新目录浏览链接 端口444→440

--- a/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/3-模组游玩教程和注意事项/模组游玩教程和注意事项.md
+++ b/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/3-模组游玩教程和注意事项/模组游玩教程和注意事项.md
@@ -72,3 +72,20 @@
 	infinite_stamina = true     // [!code ++]
 ```
 :::
+
+
+
+### [ReForgedPlay / 录像回放 `Replay Mod` 非官方移植](https://www.mcmod.cn/class/15082.html)
+::: info 视频教程
+- [【Minecraft】从零开始，Replaymod超详细全面基础教程](https://www.bilibili.com/video/BV1Xg411e7QJ/)
+:::
+::: info 说明
+- 如果开启了版本隔离，需要将 FFmpeg 放到版本目录下
+:::
+::: tip 注意
+- 与 [是，史蒂夫模型 2.5.1](https://www.mcmod.cn/class/8616.html) 冲突
+详见: [github.com](https://github.com/YesSteveModel/YSM-Wiki-Issues/issues/314)
+
+解决办法
+- 无
+:::
