--- a/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/8-文件结构/0-文件结构.md
+++ b/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/8-文件结构/0-文件结构.md
@@ -2,12 +2,55 @@
 
 ::: tip 参考
 - minecraft.wiki [.minecraft](https://zh.minecraft.wiki/w/.minecraft)
+- HMCL 文档 [整合包自带 Java 教程](https://docs.hmcl.net/modpack/bundled-java.html)
 :::
 
 ---
 
-### 📁<版本名字> 文件夹
+## 📁启动器 HMCL 文件夹
 ```c
+🖴C:
+└─📁Users
+   └─📁<user>
+      ├─📁AppData
+      |  └─📁Roaming
+      |     ├─📁.hmcl
+      |     |     📄accounts.json   游戏账号配置文件
+      |     |     📄config.json     启动器 HMCL 协议配置文件
+      |     |
+      |     └─📁.minecraft          文件下载缓存文件夹 默认生成位置(可修改位置)(每次启动游戏都会生成)
+      |
+      └─📁.openjfx
+         └─📁cache                  openjfx 运行缓存(每次启动启动器 HMCL 都会生成)
+            └─📁<版本>
+               └─📁<处理器架构>
+```
+```c
+....
+└─📁Minecraft_Java
+   └─📁HMCL
+      |  📄hmcl.json                               启动器配置文件
+      |  ▶️HMCL-<版本号>.exe                       启动器
+      |
+      ├─📁.hmcl
+      |  ├─📁dependencies
+      |  │  ├─📁universal
+      |  │  │     ☕authlib-injector-<版本号>.jar  外置登录
+      |  │  │
+      |  │  └─📁<系统架构>
+      |  │     └─📁openjfx                         启动器用户界面运行库
+      |  │           ☕javafx-base-<版本号>-win.jar
+      |  │           ☕javafx-controls-<版本号>-win.jar
+      |  │           ☕javafx-graphics-<版本号>-win.jar
+      |  │
+      |  └─📁logs
+      |
+      └─📁jre-<处理器架构>                          启动器运行Java
+```
+
+## 📁<版本名字> 文件夹
+```c
+....
 └─📁.minecraft
    └─📁versions
       └─📁<版本名字>
