--- a/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/1-简洁教程/5-安装枪包.md
+++ b/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/1-简洁教程/5-安装枪包.md
@@ -14,7 +14,7 @@
 - ①[http://lmgzs.fun:440/.../EMX逆境重科主包.zip](http://lmgzs.fun:440/files/%e6%88%91%e7%9a%84%e4%b8%96%e7%95%8c/Java/%e5%bd%a2%e5%bd%a2%e8%89%b2%e8%89%b2%e7%9a%84%e6%a8%a1%e5%9e%8b/%e6%b0%b8%e6%81%92%e6%9e%aa%e6%a2%b0%e5%b7%a5%e5%9d%8a%ef%bc%9a%e9%9b%b6%20%e6%9e%aa%e5%8c%85/%e5%85%8d%e8%b4%b9/EMX%e9%80%86%e5%a2%83%e9%87%8d%e7%a7%91/%5bTacz1.1.5+%5dEMX-Arms%20GunsPack%20ver1.1.5.zip)
 - ②[http://lmgzs.fun:440/.../民间枪匠附属包.zip](http://lmgzs.fun:440/files/%e6%88%91%e7%9a%84%e4%b8%96%e7%95%8c/Java/%e5%bd%a2%e5%bd%a2%e8%89%b2%e8%89%b2%e7%9a%84%e6%a8%a1%e5%9e%8b/%e6%b0%b8%e6%81%92%e6%9e%aa%e6%a2%b0%e5%b7%a5%e5%9d%8a%ef%bc%9a%e9%9b%b6%20%e6%9e%aa%e5%8c%85/%e5%85%8d%e8%b4%b9/EMX%e9%80%86%e5%a2%83%e9%87%8d%e7%a7%91/%5bTacz1.1.5+%5dCUST%20GunsmithPack%20ver1.1.5.zip)
 - ③[http://lmgzs.fun:440/.../TRIS天枢动力](http://lmgzs.fun:440/files/%e6%88%91%e7%9a%84%e4%b8%96%e7%95%8c/Java/%e5%bd%a2%e5%bd%a2%e8%89%b2%e8%89%b2%e7%9a%84%e6%a8%a1%e5%9e%8b/%e6%b0%b8%e6%81%92%e6%9e%aa%e6%a2%b0%e5%b7%a5%e5%9d%8a%ef%bc%9a%e9%9b%b6%20%e6%9e%aa%e5%8c%85/%e5%85%8d%e8%b4%b9/TRIS%e5%a4%a9%e6%9e%a2%e5%8a%a8%e5%8a%9b/%5bTacz1.1.5+%5dTRIS-dyna%20GunsPack%20ver1.1.5.zip.zip)
-- ④[http://lmgzs.fun:440/.../英仙座重置v2.0](http://lmgzs.fun:440/files/%e6%88%91%e7%9a%84%e4%b8%96%e7%95%8c/Java/%e5%bd%a2%e5%bd%a2%e8%89%b2%e8%89%b2%e7%9a%84%e6%a8%a1%e5%9e%8b/%e6%b0%b8%e6%81%92%e6%9e%aa%e6%a2%b0%e5%b7%a5%e5%9d%8a%ef%bc%9a%e9%9b%b6%20%e6%9e%aa%e5%8c%85/%e5%85%8d%e8%b4%b9/%e8%8b%b1%e4%bb%99%e5%ba%a7%e9%87%8d%e7%bd%aev2.0/NPGP2.0.zip)
+- ④[http://lmgzs.fun:440/.../英仙座重置](http://lmgzs.fun:440/files/%e6%88%91%e7%9a%84%e4%b8%96%e7%95%8c/Java/%e5%bd%a2%e5%bd%a2%e8%89%b2%e8%89%b2%e7%9a%84%e6%a8%a1%e5%9e%8b/%e6%b0%b8%e6%81%92%e6%9e%aa%e6%a2%b0%e5%b7%a5%e5%9d%8a%ef%bc%9a%e9%9b%b6%20%e6%9e%aa%e5%8c%85/%e5%85%8d%e8%b4%b9/%e8%8b%b1%e4%bb%99%e5%ba%a7%e9%87%8d%e7%bd%ae/%5bNPGP3.2%5dRelease.zip)
 - ⑤[http://lmgzs.fun:440/.../魔艺军械师](http://lmgzs.fun:440/files/%e6%88%91%e7%9a%84%e4%b8%96%e7%95%8c/Java/%e5%bd%a2%e5%bd%a2%e8%89%b2%e8%89%b2%e7%9a%84%e6%a8%a1%e5%9e%8b/%e6%b0%b8%e6%81%92%e6%9e%aa%e6%a2%b0%e5%b7%a5%e5%9d%8a%ef%bc%9a%e9%9b%b6%20%e6%9e%aa%e5%8c%85/%e5%85%8d%e8%b4%b9/%e9%ad%94%e8%89%ba%e5%86%9b%e6%a2%b0%e5%b8%88/Ars%20Armorer_v1.0.0_for115.zip)
 
 ::: details 原地址
@@ -29,7 +29,7 @@
 - ③[https://www.curseforge.com/.../TRIS天枢动力](https://www.curseforge.com/minecraft/customization/tacz-tris-dyna-gunpack)
 
 ---
-[伊波Mikan](https://ifdian.net/a/aaanjuinami)
+[伊波Mikan](https://afdian.com/a/aaanjuinami)
 - ④[https://www.curseforge.com/.../PGP英仙座](https://www.curseforge.com/minecraft/mc-addons/tacz-perseus-gun-pack)
 
 ---
