--- a/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/3-模组游玩教程和注意事项/模组游玩教程和注意事项.md
+++ b/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/3-模组游玩教程和注意事项/模组游玩教程和注意事项.md
@@ -3,9 +3,6 @@
 
 
 ### [是，史蒂夫模型](https://www.mcmod.cn/class/8616.html)
-::: info 硬件兼容检查
-- [查看cpu架构，x86还是arm](https://blog.csdn.net/weixin_45048331/article/details/120440327)
-:::
 ::: info 视频教程
 - [合集·Yes Steve Model 更新视频](https://space.bilibili.com/4435845/lists/2230143?type=season)
 :::
@@ -63,7 +60,7 @@
     └─config
            parcool-client.toml
 ```
-```c
+```toml
 [Stamina]
 	#Caution : Max stamina and stamina recovery config is removed because they became attributes.
 	#Infinite Stamina (this needs a permission from server, even if it is on single player's game. normally permitted)
