2026年1月4日 新增插件 vitepress-plugin-image-viewer 处理 config.mts 2处报错

--- a/docs/其他/壁纸/壁纸.md
+++ b/docs/其他/壁纸/壁纸.md
@@ -4,13 +4,13 @@
 
 ### 当前使用
 <div style="display: flex; gap: 10px; flex-wrap: wrap; justify-content: center;">
-    <a href="https://example.com/page1" style="width: 22%;">
+    <a href="#" style="width: 22%;">
         <img src="http://lmgzs.fun:441/images/pixiv/115678062_p0.png" alt="图片" style="width: 100%;">
     </a>
-    <a href="https://example.com/page2" style="width: 22%;">
+    <a href="#" style="width: 22%;">
         <img src="http://lmgzs.fun:441/images/pixiv/115678062_p1.png" alt="图片" style="width: 100%;">
     </a>
-    <a href="https://example.com/page2" style="width: 22%;">
+    <a href="#" style="width: 22%;">
         <img src="http://lmgzs.fun:441/images/screenshots/2024-12-20_23.12.08.png" alt="图片" style="width: 100%;">
     </a>
 </div>
