2026年1月4日09点40分 插件更新 @mdit/plugin-img-size 修改旧的 @mdit/plugin-img-size 语法 其他文档更新

--- a/docs/成员/成员档案/我梦/我梦.md
+++ b/docs/成员/成员档案/我梦/我梦.md
@@ -1,5 +1,5 @@
 ::: info 我梦
-![头像](/成员/成员档案/我梦/media/images/avatars/processed/QQ1260292320.jpg =100x)
+![头像 =100x](/成员/成员档案/我梦/media/images/avatars/processed/QQ1260292320.jpg)
 ::: details 介绍
 ::: tabs
 == 敷衍大王
