--- a/docs/成员/成员档案/阿伟/阿伟.md
+++ b/docs/成员/成员档案/阿伟/阿伟.md
@@ -1,5 +1,5 @@
 ::: info 阿伟
-![头像](/成员/成员档案/阿伟/media/images/avatars/processed/QQ1928984073__1.png =100x)
+![头像 =100x](/成员/成员档案/阿伟/media/images/avatars/processed/QQ1928984073__1.png)
 ::: details 介绍
 ::: tabs
 == 爱的守候
