--- a/docs/成员/成员档案/霄杨/霄杨.md
+++ b/docs/成员/成员档案/霄杨/霄杨.md
@@ -1,5 +1,5 @@
 ::: info 霄杨Skycie
-![头像](/成员/成员档案/霄杨/media/images/avatars/processed/QQ1816323534.jpg =100x)
+![头像 =100x](/成员/成员档案/霄杨/media/images/avatars/processed/QQ1816323534.jpg)
 ::: details 介绍
 ::: tabs
 == 粉裙下的英雄
