--- a/docs/落梦工作室/贡献/贡献.md
+++ b/docs/落梦工作室/贡献/贡献.md
@@ -3,7 +3,7 @@
 
 ---
 
-### [A_WEI](../../成员/外部成员/阿伟/阿伟.md)
+### [A_WEI](../../成员/成员档案/阿伟/阿伟.md)
 ::: details 落梦域_Java-1.20.1-模组服
 
 ---
@@ -69,7 +69,7 @@
 
 ---
 
-### [A_zhao](../../成员/外部成员/朝久暮/朝久暮.md)
+### [A_zhao](../../成员/成员档案/朝久暮/朝久暮.md)
 ::: details 落梦域_Java-1.20.1-模组服
 
 ---
@@ -157,7 +157,7 @@
 
 ---
 
-### [a](../../成员/外部成员/a/a.md)
+### [a](../../成员/成员档案/a/a.md)
 ::: details 落梦域_Java-1.20.1-模组服
 
 ---
