--- a/docs/成员/成员档案/冰影狼/冰影狼.md
+++ b/docs/成员/成员档案/冰影狼/冰影狼.md
@@ -1,5 +1,5 @@
 ::: info 冰影狼
-![头像](/成员/成员档案/冰影狼/media/images/avatars/processed/QQ180273805.jpg =100x)
+![头像 =100x](/成员/成员档案/冰影狼/media/images/avatars/processed/QQ180273805.jpg)
 <!-- ::: details 介绍
 ::: tabs
 == tab 1
