--- a/docs/成员/成员档案/尘星/尘星.md
+++ b/docs/成员/成员档案/尘星/尘星.md
@@ -1,5 +1,5 @@
 ::: info 尘星
-![头像](/成员/成员档案/尘星/media/images/avatars/processed/QQ1602743246.jpg =100x)
+![头像 =100x](/成员/成员档案/尘星/media/images/avatars/processed/QQ1602743246.jpg)
 <!-- ::: details 介绍
 ::: tabs
 == tab 1
