--- a/docs/成员/成员档案/朝久暮/朝久暮.md
+++ b/docs/成员/成员档案/朝久暮/朝久暮.md
@@ -1,5 +1,5 @@
 ::: info 朝久暮
-![头像](/成员/成员档案/朝久暮/media/images/avatars/processed/QQ2062827001.jpg =100x)
+![头像 =100x](/成员/成员档案/朝久暮/media/images/avatars/processed/QQ2062827001.jpg)
 ::: details 介绍
 ::: tabs
 == 血泪交织
