--- a/docs/成员/成员档案/林木木/林木木.md
+++ b/docs/成员/成员档案/林木木/林木木.md
@@ -1,5 +1,5 @@
 ::: info 林木木
-![头像](/成员/成员档案/林木木/media/images/avatars/processed/QQ3492349134.jpg =100x)
+![头像 =100x](/成员/成员档案/林木木/media/images/avatars/processed/QQ3492349134.jpg)
 ::: details 介绍
 <!-- 
 ::: tabs
