--- a/docs/成员/成员档案/阳光宅男/阳光宅男.md
+++ b/docs/成员/成员档案/阳光宅男/阳光宅男.md
@@ -1,5 +1,5 @@
 ::: info 阳光宅男
-![头像](/成员/成员档案/阳光宅男/media/images/avatars/processed/QQ3778663457.jpg =100x)
+![头像 =100x](/成员/成员档案/阳光宅男/media/images/avatars/processed/QQ3778663457.jpg)
 ::: details 介绍
 ::: tabs
 == ???
