2026年1月8日 添加 模组服整合包教程

--- a/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/7-整合包/0-整合包.md
+++ b/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/7-整合包/0-整合包.md
@@ -1,7 +1,6 @@
 
 # 整合包
 
-## 暂无
 <!-- 
 ::: info 官方或玩家配置好的整合包，适用于懒人
 :::
@@ -34,3 +33,499 @@
 - 美观 ⭐
 :::
 -->
+
+## 官方整合包
+
+### 下载
+点击链接加入群聊【MC-LM · [落梦]工作室】：https://qm.qq.com/q/Jt0ZrAR7Sq
+```c
+684522645
+```
+![图片 =200x](/images/other/QQ群聊-684522645.jpg)
+
+
+
+### 安装
+打开资源管理器，将下载好的文件拖入启动器，按照启动器内提示完成操作
+
+
+
+### 命名规则
+```c
+1.20.1_Forge_Mod-New-13__Public_2025-12-21
+<游戏版本>_<模组加载器>_<有模组|有模组-其他周目>-<更新次数>__[备注|说明]
+
+1.20.1              <游戏版本>
+Forge               <模组加载器>
+Mod-New             <有模组-其他周目>
+13                  <更新次数>
+Public_2025-12-21   [备注|说明]
+```
+
+
+
+### 文件结构
+::: tip 制作整合包注意事项
+- 没有列出的文件或文件夹 按需删除
+- `-` 所在行表示需要删除的内容，其他文件或文件夹 按需保留
+:::
+
+::: code-group
+```c [目录树状图]
+<整合包名字>
+│  📄manifest.json
+│  📄mcbbs.packmeta
+│  
+└─📁overrides
+    │  📄options.txt                              包含按键绑定保存配置项
+    │  📄servers.dat
+    │  
+    ├─📁config                                    包含 masa 系列模组按键绑定保存配置项
+    │  |   📄replaymod-rendersettings.json        包含媒体导出绝对路径  // [!code --]
+    |  |   📄replaymod-screenshotsettings.json    包含媒体导出绝对路径  // [!code --]
+    |  |
+    │  ├─📁jei
+    │  │  └─📁world                               书签                  // [!code --]
+    |  |
+    |  ├─📁litematica                             投影选区坐标          // [!code --]
+    |  └─📁yes_steve_model                        模型                  // [!code --]
+    |
+    ├─📁journeymap
+    │  └─📁config
+    │      └─📁5.10
+    │              
+    ├─📁mods
+    ├─📁resourcepacks
+    │      [付费内容]   // [!code --]
+    │      
+    ├─📁shaderpacks
+    │      [付费内容]   // [!code --]
+    │      
+    └─📁tacz
+
+```
+```c [删除列表]
+📁<整合包名字>\overrides\config\jei\world
+📁<整合包名字>\overrides\config\litematica
+📁<整合包名字>\overrides\config\yes_steve_model
+
+📄<整合包名字>\overrides\config\replaymod-rendersettings.json
+📄<整合包名字>\overrides\config\replaymod-screenshotsettings.json
+
+  <整合包名字>\overrides\resourcepacks\[付费内容]
+  <整合包名字>\overrides\shaderpacks\[付费内容]
+
+```
+:::
+
+
+### 按键绑定
+::: tip 提示
+- 推荐使用 104 键键盘
+- 制作键谱工具 github [键谱 keymap](https://github.com/cataerogong/keymap)
+:::
+
+
+::: tip 下载 / 在线使用 键谱 keymap
+- 下载键谱文件 <a download href="./files/1.20.1_Forge_Mod-New-13.keymap">1.20.1_Forge_Mod-New-13.keymap</a>
+- 在线使用 [lmgzs.fun:440/.../keymap.html](http://lmgzs.fun:440/files/静态站点/keymap-master/keymap.html)
+<br>
+需要下载 `.keymap` 文件, 之后点击左上角 `从文件载入`
+
+::: details 点击 查看 键谱 keymap PNG
+![图片](./images/1.20.1_Forge_Mod-New-13_L0_全部.png)
+:::
+
+
+::: tip 按键绑定保存位置
+- 按键绑定保存在 `📄<整合包名字>/options.txt`
+- masa 系列模组按键绑定保存在 `📁<整合包名字>/config/`
+
+::: details masa 系列模组 绑定热键查看
+```c
+[RIGHT_ALT + C] malilib:                        打开设置界面
+[X + C]         tweakeroo:  openConfigGui       打开配置界面
+[J]             litematica: openGuiMainMenu     投影主界面
+```
+:::
+
+
+::: details 未指定的按键 / 删除的指定按键
+::: code-group
+```c [未指定的按键]
+杂项
+    [未指定] 切换生命值条显示 模组`c[极简血量显示]Neat`
+    [未指定] 高亮玩家
+
+Create (模组`cs[机械动力]create`)
+    [未指定] 打开方块旋转菜单
+
+Do a Barrel Roll (模组`c[滚筒飞行]do_a_barrel_roll`)
+    [未指定] Open Config 打开配置界面
+    [未指定] Toggle Thrusting 切换推力
+
+Do a Barrel Roll Movement (模组`c[滚筒飞行]do_a_barrel_roll`)
+    [未指定] Pitch Down
+    [未指定] Pitch Up
+    [未指定] Roll Left
+    [未指定] Roll Right
+
+Immersive Aircraft (模组`cs[沉浸式飞机]immersive_aircraft`)
+    [未指定] 使用武器/坐骑
+    [未指定] 向上移动
+    [未指定] 向下移动
+    [未指定] 向左移动
+    [未指定] 向右移动
+    [未指定] 向前移动
+    [未指定] 向后移动
+
+JEI(作弊模式) (模组`c[JEI物品管理器]jei`)
+    [未指定] 切换作弊模式
+
+JEI(开发者工具) (模组`c[JEI物品管理器]jei`)
+    [未指定] 复制配方 ID 到剪贴板
+
+JEI(悬浮界面) (模组`c[JEI物品管理器]jei`)
+    [未指定] 上一页
+    [未指定] 下一页
+    [未指定] 显示/隐藏加入书签的物品
+
+JEI(编辑模式) (模组`c[JEI物品管理器]jei`)
+    [未指定] 编辑模式开关
+
+Leawind的第三人称 (模组`c[LEAWIND的第三人称视角]leawind_third_person`)
+    [未指定] 切换俯仰角锁定
+    [未指定] 切换模组是否启用
+    [未指定] 打开配置菜单
+    [未指定] 按住强制瞄准
+    [未指定] 短按切换瞄准状态
+
+Replay Mod (模组`c[录像回放]reforgedplaymod/replaymod`)
+    [未指定] 位置/旁观者+时间关键帧
+    [未指定] 位置关键帧
+
+新生魔艺 (模组`cs[新生魔艺]ars_nouveau`)
+    [未指定] 召唤/驱散使魔
+    [未指定] 快速施法槽 06
+    [未指定] 快速施法槽 07
+    [未指定] 快速施法槽 08
+    [未指定] 快速施法槽 09
+    [未指定] 快速施法槽 10
+
+是，史蒂夫模型 (模组`c[是史蒂夫模型]ysm`)
+    [未指定] 播放额外动画 1
+    [未指定] 播放额外动画 2
+    [未指定] 播放额外动画 3
+    [未指定] 播放额外动画 4
+    [未指定] 播放额外动画 5
+    [未指定] 播放额外动画 6
+    [未指定] 播放额外动画 7
+
+精妙背包 (模组`cs[精妙背包]sophisticatedbackpacks`)
+    [未指定] 基于所指方块/实体替换工具
+    [未指定] 打开/关闭第三个插槽中的升级卡
+    [未指定] 打开/关闭第五个插槽中的升级卡
+    [未指定] 打开/关闭第四个插槽中的升级卡
+
+跑酷(ParCool) (模组`cs[跑酷]ParCool`)
+    [未指定] 快速转向
+    [未指定] 空翻
+```
+```c [删除的指定按键]
+创造模式
+    [C] 保存快捷栏
+    [x] 加载快捷栏
+
+Immersive Aircraft (模组`cs[沉浸式飞机]immersive_aircraft`)
+    [B] 火箭助推
+
+journeymap(旅行地图) (模组`c[旅行地图]journeymap`)
+    [B] 创建路标点
+    [Z] 开关全部路标点
+
+journeymap(旅行地图) 全屏地图 (模组`c[旅行地图]journeymap`)
+    [B] 创建路标点(光标所在处)
+    [C] 发送位置(光标所在处)到聊天栏
+    [H] 禁用全屏按钮
+    [O] 选项管理器
+
+Leawind的第三人称 (模组`c[LEAWIND的第三人称视角]leawind_third_person`)
+    [Z] 按住调节相机位置
+
+Replay Mod (模组`c[录像回放]reforgedplaymod/replaymod`)
+    [I] 位置/旁观者关键帧
+    [H] 切换路径预览
+    [V] 同步帧和游戏的进度
+    [Q] 快速模式
+    [N] 截取缩略图
+    [X] 打开关键帧设置
+    [P] 播放/暂停回放
+    [O] 时间关键帧
+    [M] 添加标记事件
+    [C] 清除关键帧
+    [Z] 照明模式
+    [B] 玩家列表
+    [J] 逆时针旋转
+    [K] 重置镜头的旋转角度
+    [L] 顺时针旋转
+
+新生魔艺 (模组`cs[新生魔艺]ars_nouveau`)
+    [G] 头部 Curio 饰品菜单
+    [Z] (法术书)上一格
+    [X] (法术书)下一格
+
+是，史蒂夫模型 (模组`c[是史蒂夫模型]ysm`)
+    [ALT+B] 打开动画调试
+    [ALT+P] 打开额外玩家渲染配置
+
+永恒枪械工坊:Zero (模组`cs[永恒枪械工坊]tacz`)
+    [ALT+T] 打开 TAC配置文件
+    [O]     持械时互动
+    [C]     爬行
+
+灾变能力键位 (模组`cs[灾变]L_Enders_Cataclysm`)
+    [Y] 灾变胸甲能力
+    [X] 灾变能力
+    [V] 灾变靴子能力
+
+精妙模组 (模组`cs[精妙背包]sophisticatedbackpacks`)
+    [']     Deposit Item into Storage/Backpack
+    [\]     Restock Item from Storage/Backpack
+    [中键]  整理容器/背包
+    [;]     高亮存有物品的容器
+
+精妙背包 (模组`cs[精妙背包]sophisticatedbackpacks`)
+    [ALT+Z] 打开/关闭第一个插槽中的升级卡
+    [ALT+X] 打开/关闭第二个插槽中的升级卡
+    [C]     运行物品交互升级(如取货/卸货升级)
+```
+:::
+::: details 键谱格式
+::: code-group
+```c [按键单功能-原版]
+按键功能名
+
+按键功能名
+- 原版
+- 说明
+- 使用条件
+-- 条件1
+-- 条件2
+```
+```c [按键单功能-模组]
+按键功能名
+
+按键功能名
+(未翻译原名)
+- 模组 <模组名>
+- 说明
+- 使用条件
+-- 条件1
+-- 条件2
+```
+```c [按键多功能]
+按键功能名
+
+按键功能名
+- 原版
+- 说明
+- 使用条件
+-- 条件1
+-- 条件2
+
+按键功能名
+(未翻译原名)
+- 模组 <模组名>
+- 说明
+- 使用条件
+-- 条件1
+-- 条件2
+```
+```c [按键分组]
+单功能 或有 主要功能 的按键放到 主要功能 对应的分组
+多功能 没有 主要功能 的按键应当放到 `[多模组共用]` 分组
+```
+:::
+::: details 键谱分组
+```c
+系统快捷键::    #ccccccff::, 
+移动::          #C9FFCC::, 
+游戏内容::      #BDF2C0::, 
+物品栏::        #B0E6B3::, 
+创造模式::      #000000::, 
+多人游戏::      #A4D9A7::, 
+杂项::          #97CC9A::, 
+Carry On::                  #FFFF00::, 
+Create::                    #FFFF0D::, 
+Do a Barrel Roll::          #FFFF1A::, 
+Immersive Aircraft::        #000000::, 
+JEI::                       #FFFF26::, 
+journeymap::                #FFFF33::, 
+justzoom::                  #FFFF40::, 
+leawind_third_person::      #FFFF4C::, 
+oculus::                    #FFFF59::, 
+replaymod::                 #FFFF66::, 
+ars_nouveau::               #FFFF73::, 
+ysm::                       #FFFF80::, 
+tacz::                      #FFFF8C::, 
+sophisticatedbackpacks::    #FFFF99::, 
+ParCool::                   #FFFFA6::, 
+MASA::                      #FFFFB2::, 
+多模组共用::                 #aabbcc::
+```
+:::
+
+
+
+
+
+
+
+
+
+
+
+### 客户端模组配置文件
+
+#### 修改的模组配置文件(编辑文件)
+::: tip 提示
+- 使用文本编辑器打开修改的配置项
+- 不包含 在游戏内通过界面/按键操作 更改的配置项
+<br>
+例如:
+<br>
+不包含 使用绑定热键进行开关的模组功能并写入配置文件的配置项
+<br>
+(`c[滚筒飞行]do_a_barrel_roll` 使用绑定热键进行开关模组功能 `"mod_enabled": true/false,`)
+
+- 只列出更改的配置项
+:::
+
+##### 模组加载器 forge
+``` c
+<整合包名字>/config/forge-client.toml
+```
+::: code-group
+```toml [forge-client.toml]
+#Client only settings, mostly things related to rendering
+[client]
+	#Enable Forge to queue all chunk updates to the Chunk Update thread.
+	#May increase FPS significantly, but may also cause weird rendering lag.
+	#Not recommended for computers without a significant number of cores available.
+    #启用 Forge将所有区块更新任务排队至区块更新线程。
+    #可能会显著提高FPS，但也可能导致奇怪的渲染延迟。
+    #不建议用于没有足够核心的计算机。
+	alwaysSetupTerrainOffThread = false // [!code --]
+	alwaysSetupTerrainOffThread = true  // [!code ++]
+```
+:::
+
+##### c[滚筒飞行]do_a_barrel_roll
+``` c
+<整合包名字>/config/do_a_barrel_roll-client.json
+```
+::: code-group
+```json [do_a_barrel_roll-client.json]
+{
+  "format_version_do_not_edit": 2,
+  "general": {
+    "hud": {
+      "show_horizon": false // [!code --]
+      "show_horizon": true  // [!code ++] 显示水平线
+    },
+    "banking": {
+      "enable_banking": true,   // [!code --]
+      "enable_banking": false,  // [!code ++] 飞机侧倾
+    },
+    "thrust": {
+      "enable_thrust": false,   // [!code --]
+      "enable_thrust": true,    // [!code ++] 推力(按下绑定热键触发)
+      "max_thrust": 2.0,        // [!code --]
+      "max_thrust": 6.6,        // [!code ++] 最大推力
+    },
+  },
+}
+```
+:::
+
+##### cs[网络音乐机]netmusic-1.2.1
+``` c
+<整合包名字>/config/netmusic-common.toml
+```
+::: code-group
+```toml [netmusic-common.toml]
+
+[general]
+	#Whether stereo playback is enabled
+    #是否启用立体声播放
+	EnableStereo = true     // [!code --]
+	EnableStereo = false    // [!code ++]
+
+```
+:::
+
+##### cs[跑酷]ParCool
+```c
+<整合包名字>/config/parcool-client.toml
+```
+::: code-group
+```toml [parcool-client.toml]
+[Stamina]
+	#Caution : Max stamina and stamina recovery config is removed because they became attributes.
+	#Infinite Stamina (this needs a permission from server, even if it is on single player's game. normally permitted)
+	#Please check 'parcool-server.toml' in 'serverconfig' directory
+    #警告: 最大体力和体力恢复配置已移除，因为它们已变为属性。
+    #无限耐力 (此功能需要服务器权限，即便是在单人游戏中。通常已获许可)
+    #请检查 'serverconfig' 目录中的 'parcool-server.toml' 文件
+	infinite_stamina = false    // [!code --]
+	infinite_stamina = true     // [!code ++]
+```
+:::
+
+#### 修改的模组配置文件(界面/按键)
+::: tip 提示
+- 仅包含 在游戏内通过界面/按键操作 更改的配置项
+- 只列出更改的配置项
+:::
+
+##### c[录像回放]reforgedplaymod/replaymod
+``` c
+<整合包名字>/config/replaymod.json
+```
+::: code-group
+```json [replaymod.json]
+{
+  "recording": {
+    "autoStartRecording": true,     // [!code --]
+    "autoStartRecording": false,    // [!code ++] 自动开启录制
+  },
+  "replay": {           // 回放中
+    "showChat": true,   // [!code --]
+    "showChat": false,  // [!code ++] 显示聊天
+    "camera": "replaymod.camera.classic",   // [!code --]
+    "camera": "replaymod.camera.vanilla",   // [!code ++] 相机 原版
+    "camera_valid_values": [        // 相机有效值
+      "replaymod.camera.classic",   // [!code ++]
+      "replaymod.camera.vanilla"    // [!code ++]
+    ],
+  },
+}
+```
+:::
+
+
+
+<!-- 
+``` c
+<整合包名字>/config/
+```
+::: code-group
+```json toml []
+```
+:::
+ -->
+
+
+
+## 其他整合包
+暂无
