2026年1月11日 教程更新 - 整合包 - 文件结构 注释无效字体@font-face

--- a/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/7-整合包/0-整合包.md
+++ b/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/7-整合包/0-整合包.md
@@ -52,7 +52,7 @@
 
 ### 命名规则
 ```c
-1.20.1_Forge_Mod-New-13__Public_2025-12-21
+1.20.1_Forge_Mod-New-13__public_2025-12-21
 <游戏版本>_<模组加载器>_<有模组|有模组-其他周目>-<更新次数>__[备注|说明]
 
 1.20.1              <游戏版本>
@@ -102,12 +102,14 @@ Public_2025-12-21   [备注|说明]
     │      [付费内容]   // [!code --]
     │      
     └─📁tacz
+       └─📁tacz_default_gun                       默认枪包              // [!code --]
 
 ```
 ```c [删除列表]
 📁<整合包名字>\overrides\config\jei\world
 📁<整合包名字>\overrides\config\litematica
 📁<整合包名字>\overrides\config\yes_steve_model
+📁<整合包名字>\overrides\tacz\tacz_default_gun
 
 📄<整合包名字>\overrides\config\replaymod-rendersettings.json
 📄<整合包名字>\overrides\config\replaymod-screenshotsettings.json
@@ -269,6 +271,9 @@ Replay Mod (模组`c[录像回放]reforgedplaymod/replaymod`)
     [K] 重置镜头的旋转角度
     [L] 顺时针旋转
 
+Touhou Little Maid (模组`cs[车万女仆]touhoulittlemaid`)
+    [X] 女仆AI语言对话
+
 新生魔艺 (模组`cs[新生魔艺]ars_nouveau`)
     [G] 头部 Curio 饰品菜单
     [Z] (法术书)上一格
@@ -277,6 +282,7 @@ Replay Mod (模组`c[录像回放]reforgedplaymod/replaymod`)
 是，史蒂夫模型 (模组`c[是史蒂夫模型]ysm`)
     [ALT+B] 打开动画调试
     [ALT+P] 打开额外玩家渲染配置
+    [ALT+L] 锁定轮盘
 
 永恒枪械工坊:Zero (模组`cs[永恒枪械工坊]tacz`)
     [ALT+T] 打开 TAC配置文件
@@ -298,6 +304,9 @@ Replay Mod (模组`c[录像回放]reforgedplaymod/replaymod`)
     [ALT+Z] 打开/关闭第一个插槽中的升级卡
     [ALT+X] 打开/关闭第二个插槽中的升级卡
     [C]     运行物品交互升级(如取货/卸货升级)
+
+跑酷(ParCool) (模组`cs[跑酷]ParCool`)
+    [C] 方块藏匿(干草或树叶块)
 ```
 :::
 ::: details 键谱格式
