--- a/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/8-文件结构/0-文件结构.md
+++ b/docs/落梦工作室/帮助/落梦域/落梦域_Java-1.20.1-模组服-帮助/8-文件结构/0-文件结构.md
@@ -29,10 +29,11 @@
 ....
 └─📁Minecraft_Java
    └─📁HMCL
-      |  📄hmcl.json                               启动器配置文件
       |  ▶️HMCL-<版本号>.exe                       启动器
       |
       ├─📁.hmcl
+      |  |  📄hmcl.json                            启动器配置文件
+      |  |
       |  ├─📁dependencies
       |  │  ├─📁universal
       |  │  │     ☕authlib-injector-<版本号>.jar  外置登录
